@@ -104,13 +104,23 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<release>24</release>
+					<compilerArgs>
+						<arg>--add-exports=org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-exports=org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED -Dpolyglot.engine.WarnInterpreterOnly=false --enable-native-access=app.photofx.vipsffm,org.graalvm.truffle -XX:+EnableDynamicAgentLoading</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<jvmArguments>--add-reads wolpi=ALL-UNNAMED --enable-native-access=app.photofox.vipsffm</jvmArguments>
+					<jvmArguments>--enable-native-access=app.photofox.vipsffm,org.graalvm.truffle</jvmArguments>
 				</configuration>
 				<executions>
 					<execution>
